--- a/cmd/thanos/BUILD.bazel
+++ b/cmd/thanos/BUILD.bazel
@@ -27,9 +27,12 @@ go_library(
         "//pkg/api",
         "//pkg/api/blocks",
         "//pkg/api/query",
+        "//pkg/api/query/querypb",
         "//pkg/api/rule",
         "//pkg/block",
+        "//pkg/block/indexheader",
         "//pkg/block/metadata",
+        "//pkg/clientconfig",
         "//pkg/compact",
         "//pkg/compact/downsample",
         "//pkg/compactv2",
@@ -39,14 +42,16 @@ go_library(
         "//pkg/discovery/dns",
         "//pkg/errutil",
         "//pkg/exemplars",
+        "//pkg/extannotations",
         "//pkg/extflag",
         "//pkg/extgrpc",
         "//pkg/extgrpc/snappy",
+        "//pkg/exthttp",
         "//pkg/extkingpin",
         "//pkg/extprom",
         "//pkg/extprom/http",
+        "//pkg/extpromql",
         "//pkg/gate",
-        "//pkg/httpconfig",
         "//pkg/info",
         "//pkg/info/infopb",
         "//pkg/logging",
@@ -69,7 +74,9 @@ go_library(
         "//pkg/store/cache",
         "//pkg/store/labelpb",
         "//pkg/store/storepb",
+        "//pkg/strutil",
         "//pkg/targets",
+        "//pkg/tenancy",
         "//pkg/tls",
         "//pkg/tracing",
         "//pkg/tracing/client",
@@ -80,8 +87,8 @@ go_library(
         "@com_github_go_kit_log//:log",
         "@com_github_go_kit_log//level",
         "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors/logging",
-        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors/tags",
-        "@com_github_nytimes_gziphandler//:gziphandler",
+        "@com_github_kimmachinegun_automemlimit//memlimit:go_default_library",
+        "@com_github_klauspost_compress//gzhttp",
         "@com_github_oklog_run//:run",
         "@com_github_oklog_ulid//:ulid",
         "@com_github_olekukonko_tablewriter//:tablewriter",
@@ -89,33 +96,37 @@ go_library(
         "@com_github_pkg_errors//:errors",
         "@com_github_prometheus_client_golang//prometheus",
         "@com_github_prometheus_client_golang//prometheus/collectors",
+        "@com_github_prometheus_client_golang//prometheus/collectors/version",
         "@com_github_prometheus_client_golang//prometheus/promauto",
         "@com_github_prometheus_common//model",
         "@com_github_prometheus_common//route",
         "@com_github_prometheus_common//version",
         "@com_github_prometheus_prometheus//config",
+        "@com_github_prometheus_prometheus//discovery",
         "@com_github_prometheus_prometheus//discovery/file",
         "@com_github_prometheus_prometheus//discovery/targetgroup",
         "@com_github_prometheus_prometheus//model/labels",
         "@com_github_prometheus_prometheus//model/relabel",
         "@com_github_prometheus_prometheus//notifier",
         "@com_github_prometheus_prometheus//promql",
+        "@com_github_prometheus_prometheus//promql/parser",
         "@com_github_prometheus_prometheus//rules",
         "@com_github_prometheus_prometheus//storage",
         "@com_github_prometheus_prometheus//storage/remote",
         "@com_github_prometheus_prometheus//tsdb",
         "@com_github_prometheus_prometheus//tsdb/agent",
         "@com_github_prometheus_prometheus//tsdb/chunkenc",
-        "@com_github_prometheus_prometheus//util/strutil",
-        "@com_github_prometheus_prometheus//web/api/v1:api",
-        "@com_github_thanos_community_promql_engine//engine",
+        "@com_github_prometheus_prometheus//tsdb/wlog",
         "@com_github_thanos_io_objstore//:objstore",
         "@com_github_thanos_io_objstore//client",
+        "@com_github_thanos_io_objstore//tracing/opentracing",
+        "@com_github_thanos_io_promql_engine//api:go_default_library",
+        "@com_github_thanos_io_promql_engine//execution/parse:go_default_library",
         "@com_github_weaveworks_common//user",
         "@in_gopkg_alecthomas_kingpin_v2//:kingpin_v2",
         "@in_gopkg_yaml_v2//:yaml_v2",
         "@in_gopkg_yaml_v3//:yaml_v3",
-        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//:grpc",
         "@org_golang_x_text//language",
         "@org_golang_x_text//message",
         "@org_uber_go_automaxprocs//maxprocs",
@@ -143,6 +154,7 @@ go_test(
         "//pkg/block",
         "//pkg/block/metadata",
         "//pkg/compact/downsample",
+        "//pkg/extpromql",
         "//pkg/testutil/e2eutil",
         "@com_github_efficientgo_core//testutil",
         "@com_github_go_kit_log//:log",
@@ -151,6 +163,7 @@ go_test(
         "@com_github_prometheus_client_golang//prometheus/testutil",
         "@com_github_prometheus_prometheus//model/labels",
         "@com_github_prometheus_prometheus//promql",
+        "@com_github_prometheus_prometheus//util/annotations",
         "@com_github_thanos_io_objstore//:objstore",
     ],
 )
