--- a/examples/interactive/BUILD.bazel
+++ b/examples/interactive/BUILD.bazel
@@ -13,6 +13,7 @@ go_test(
         "@com_github_efficientgo_e2e//interactive",
         "@com_github_efficientgo_e2e//monitoring",
         "@com_github_efficientgo_e2e//monitoring/promconfig",
+        "@com_github_efficientgo_e2e//profiling",
         "@com_github_pkg_errors//:errors",
         "@com_github_prometheus_common//model",
         "@com_github_thanos_io_objstore//client",
