--- a/internal/cortex/querier/queryrange/BUILD.bazel
+++ b/internal/cortex/querier/queryrange/BUILD.bazel
@@ -3,6 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 go_library(
     name = "queryrange",
     srcs = [
+        "compat.go",
         "instrumentation.go",
         "limits.go",
         "query_range.go",
@@ -11,6 +12,7 @@ go_library(
         "retry.go",
         "roundtrip.go",
         "split_by_interval.go",
+        "stats_middleware.go",
         "step_align.go",
         "util.go",
     ],
@@ -20,12 +22,14 @@ go_library(
         "//internal/cortex/chunk/cache",
         "//internal/cortex/cortexpb",
         "//internal/cortex/querier",
+        "//internal/cortex/querier/stats",
         "//internal/cortex/tenant",
         "//internal/cortex/util",
         "//internal/cortex/util/flagext",
         "//internal/cortex/util/log",
         "//internal/cortex/util/spanlogger",
         "//internal/cortex/util/validation",
+        "//pkg/extpromql",
         "@com_github_go_kit_log//:log",
         "@com_github_go_kit_log//level",
         "@com_github_gogo_protobuf//gogoproto",
@@ -65,20 +69,22 @@ go_test(
         "retry_test.go",
         "roundtrip_test.go",
         "split_by_interval_test.go",
+        "stats_middleware_test.go",
         "step_align_test.go",
     ],
     embed = [":queryrange"],
     deps = [
         "//internal/cortex/chunk/cache",
         "//internal/cortex/cortexpb",
+        "//internal/cortex/querier/stats",
         "//internal/cortex/util",
         "//internal/cortex/util/flagext",
+        "//pkg/extpromql",
         "@com_github_go_kit_log//:log",
         "@com_github_gogo_protobuf//types",
         "@com_github_json_iterator_go//:go",
         "@com_github_prometheus_common//model",
         "@com_github_prometheus_prometheus//promql",
-        "@com_github_prometheus_prometheus//promql/parser",
         "@com_github_stretchr_testify//assert",
         "@com_github_stretchr_testify//mock",
         "@com_github_stretchr_testify//require",
