--- a/pkg/api/query/BUILD.bazel
+++ b/pkg/api/query/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
         "//pkg/exemplars",
         "//pkg/exemplars/exemplarspb",
         "//pkg/extprom/http",
+        "//pkg/extpromql",
         "//pkg/gate",
         "//pkg/logging",
         "//pkg/metadata",
@@ -28,6 +29,7 @@ go_library(
         "//pkg/store/storepb/prompb",
         "//pkg/targets",
         "//pkg/targets/targetspb",
+        "//pkg/tenancy",
         "//pkg/tracing",
         "@com_github_go_kit_log//:log",
         "@com_github_opentracing_opentracing_go//:opentracing-go",
@@ -41,9 +43,12 @@ go_library(
         "@com_github_prometheus_prometheus//promql",
         "@com_github_prometheus_prometheus//promql/parser",
         "@com_github_prometheus_prometheus//storage",
+        "@com_github_prometheus_prometheus//util/annotations",
         "@com_github_prometheus_prometheus//util/stats",
-        "@com_github_prometheus_prometheus//web/api/v1:api",
-        "@org_golang_google_grpc//:go_default_library",
+        "@com_github_thanos_io_promql_engine//api:go_default_library",
+        "@com_github_thanos_io_promql_engine//engine:go_default_library",
+        "@com_github_thanos_io_promql_engine//logicalplan:go_default_library",
+        "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
     ],
@@ -67,6 +72,7 @@ go_test(
         "//pkg/api/query/querypb",
         "//pkg/compact",
         "//pkg/component",
+        "//pkg/extpromql",
         "//pkg/gate",
         "//pkg/query",
         "//pkg/rules/rulespb",
@@ -92,9 +98,12 @@ go_test(
         "@com_github_prometheus_prometheus//storage",
         "@com_github_prometheus_prometheus//tsdb",
         "@com_github_prometheus_prometheus//tsdb/chunkenc",
-        "@com_github_prometheus_prometheus//tsdb/tsdbutil",
+        "@com_github_prometheus_prometheus//tsdb/chunks",
+        "@com_github_prometheus_prometheus//util/annotations",
         "@com_github_prometheus_prometheus//util/gate",
         "@com_github_prometheus_prometheus//util/stats",
-        "@com_github_prometheus_prometheus//web/api/v1:api",
+        "@com_github_thanos_io_promql_engine//engine:go_default_library",
+        "@com_github_thanos_io_promql_engine//logicalplan:go_default_library",
+        "@com_github_thanos_io_promql_engine//query:go_default_library",
     ],
 )
