--- a/pkg/block/indexheader/BUILD.bazel
+++ b/pkg/block/indexheader/BUILD.bazel
@@ -6,15 +6,18 @@ go_library(
         "binary_reader.go",
         "header.go",
         "lazy_binary_reader.go",
+        "parallel_bucket.go",
         "reader_pool.go",
     ],
     importpath = "github.com/thanos-io/thanos/pkg/block/indexheader",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/block",
+        "//pkg/block/metadata",
         "//pkg/runutil",
         "@com_github_go_kit_log//:log",
         "@com_github_go_kit_log//level",
+        "@com_github_google_uuid//:uuid",
         "@com_github_oklog_ulid//:ulid",
         "@com_github_pkg_errors//:errors",
         "@com_github_prometheus_client_golang//prometheus",
@@ -23,6 +26,7 @@ go_library(
         "@com_github_prometheus_prometheus//tsdb/fileutil",
         "@com_github_prometheus_prometheus//tsdb/index",
         "@com_github_thanos_io_objstore//:objstore",
+        "@org_golang_x_sync//errgroup",
         "@org_uber_go_atomic//:atomic",
     ],
 )
@@ -38,6 +42,7 @@ go_test(
     srcs = [
         "header_test.go",
         "lazy_binary_reader_test.go",
+        "parallel_bucket_test.go",
         "reader_pool_test.go",
     ],
     data = glob(["testdata/**"]),
@@ -55,6 +60,7 @@ go_test(
         "@com_github_prometheus_prometheus//tsdb/encoding",
         "@com_github_prometheus_prometheus//tsdb/fileutil",
         "@com_github_prometheus_prometheus//tsdb/index",
+        "@com_github_stretchr_testify//require",
         "@com_github_thanos_io_objstore//:objstore",
         "@com_github_thanos_io_objstore//providers/filesystem",
     ],
