--- a/pkg/compact/BUILD.bazel
+++ b/pkg/compact/BUILD.bazel
@@ -20,6 +20,7 @@ go_library(
         "//pkg/tracing",
         "@com_github_go_kit_log//:log",
         "@com_github_go_kit_log//level",
+        "@com_github_golang_groupcache//singleflight",
         "@com_github_oklog_ulid//:ulid",
         "@com_github_opentracing_opentracing_go//:opentracing-go",
         "@com_github_pkg_errors//:errors",
@@ -58,6 +59,7 @@ go_test(
         "//pkg/testutil/e2eutil",
         "@com_github_efficientgo_core//testutil",
         "@com_github_go_kit_log//:log",
+        "@com_github_oklog_run//:run",
         "@com_github_oklog_ulid//:ulid",
         "@com_github_pkg_errors//:errors",
         "@com_github_prometheus_client_golang//prometheus",
