--- a/pkg/query/BUILD.bazel
+++ b/pkg/query/BUILD.bazel
@@ -22,26 +22,32 @@ go_library(
         "//pkg/metadata/metadatapb",
         "//pkg/rules/rulespb",
         "//pkg/runutil",
+        "//pkg/server/http/middleware",
         "//pkg/store",
         "//pkg/store/labelpb",
         "//pkg/store/storepb",
+        "//pkg/store/storepb/prompb",
         "//pkg/targets/targetspb",
+        "//pkg/tenancy",
         "//pkg/tracing",
+        "//pkg/tracing/tracing_middleware",
         "@com_github_go_kit_log//:log",
         "@com_github_go_kit_log//level",
         "@com_github_opentracing_opentracing_go//:opentracing-go",
         "@com_github_pkg_errors//:errors",
         "@com_github_prometheus_client_golang//prometheus",
-        "@com_github_prometheus_common//model",
         "@com_github_prometheus_prometheus//model/histogram",
         "@com_github_prometheus_prometheus//model/labels",
         "@com_github_prometheus_prometheus//promql",
         "@com_github_prometheus_prometheus//promql/parser",
         "@com_github_prometheus_prometheus//storage",
         "@com_github_prometheus_prometheus//tsdb/chunkenc",
+        "@com_github_prometheus_prometheus//util/annotations",
         "@com_github_prometheus_prometheus//util/stats",
-        "@com_github_thanos_community_promql_engine//api",
-        "@org_golang_google_grpc//:go_default_library",
+        "@com_github_thanos_io_promql_engine//api:go_default_library",
+        "@org_golang_google_grpc//:grpc",
+        "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//status",
     ],
 )
 
@@ -64,7 +70,9 @@ go_test(
     data = glob(["testdata/**"]),
     embed = [":query"],
     deps = [
+        "//pkg/api/query/querypb",
         "//pkg/component",
+        "//pkg/extpromql",
         "//pkg/gate",
         "//pkg/info/infopb",
         "//pkg/store",
@@ -84,12 +92,16 @@ go_test(
         "@com_github_prometheus_prometheus//model/value",
         "@com_github_prometheus_prometheus//promql",
         "@com_github_prometheus_prometheus//promql/parser",
+        "@com_github_prometheus_prometheus//promql/parser/posrange",
         "@com_github_prometheus_prometheus//storage",
         "@com_github_prometheus_prometheus//tsdb/chunkenc",
+        "@com_github_prometheus_prometheus//util/annotations",
         "@com_github_prometheus_prometheus//util/gate",
         "@com_github_prometheus_prometheus//util/teststorage",
         "@com_github_stretchr_testify//require",
-        "@org_golang_google_grpc//:go_default_library",
+        "@com_github_thanos_io_promql_engine//logicalplan:go_default_library",
+        "@com_github_thanos_io_promql_engine//query:go_default_library",
+        "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//credentials/insecure",
         "@org_golang_x_sync//errgroup",
     ],
