--- a/pkg/rules/BUILD.bazel
+++ b/pkg/rules/BUILD.bazel
@@ -13,9 +13,10 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//internal/cortex/querier/series",
+        "//pkg/clientconfig",
         "//pkg/errutil",
         "//pkg/extprom",
-        "//pkg/httpconfig",
+        "//pkg/extpromql",
         "//pkg/promclient",
         "//pkg/rules/rulespb",
         "//pkg/store/labelpb",
@@ -30,11 +31,11 @@ go_library(
         "@com_github_prometheus_common//model",
         "@com_github_prometheus_prometheus//model/labels",
         "@com_github_prometheus_prometheus//model/rulefmt",
-        "@com_github_prometheus_prometheus//promql/parser",
         "@com_github_prometheus_prometheus//rules",
         "@com_github_prometheus_prometheus//storage",
+        "@com_github_prometheus_prometheus//util/annotations",
         "@in_gopkg_yaml_v3//:yaml_v3",
-        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
         "@org_golang_x_sync//errgroup",
@@ -77,7 +78,9 @@ go_test(
         "@com_github_prometheus_prometheus//promql",
         "@com_github_prometheus_prometheus//rules",
         "@com_github_prometheus_prometheus//storage",
+        "@com_github_prometheus_prometheus//util/annotations",
         "@in_gopkg_yaml_v3//:yaml_v3",
-        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//:grpc",
+        "@org_golang_x_exp//slices",
     ],
 )
