--- a/pkg/shipper/BUILD.bazel
+++ b/pkg/shipper/BUILD.bazel
@@ -38,6 +38,7 @@ go_test(
     deps = [
         "//pkg/block",
         "//pkg/block/metadata",
+        "//pkg/extprom",
         "//pkg/testutil/e2eutil",
         "@com_github_efficientgo_core//testutil",
         "@com_github_go_kit_log//:log",
