--- a/pkg/store/storepb/testutil/BUILD.bazel
+++ b/pkg/store/storepb/testutil/BUILD.bazel
@@ -5,16 +5,20 @@ go_library(
     srcs = [
         "client.go",
         "series.go",
+        "store_series_client.go",
     ],
     importpath = "github.com/thanos-io/thanos/pkg/store/storepb/testutil",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/info/infopb",
         "//pkg/store/hintspb",
         "//pkg/store/labelpb",
         "//pkg/store/storepb",
         "@com_github_cespare_xxhash//:xxhash",
         "@com_github_efficientgo_core//testutil",
+        "@com_github_go_kit_log//:log",
         "@com_github_gogo_protobuf//types",
+        "@com_github_oklog_ulid//:ulid",
         "@com_github_prometheus_prometheus//model/histogram",
         "@com_github_prometheus_prometheus//model/labels",
         "@com_github_prometheus_prometheus//storage",
