--- a/pkg/targets/BUILD.bazel
+++ b/pkg/targets/BUILD.bazel
@@ -18,8 +18,8 @@ go_library(
         "@com_github_go_kit_log//level",
         "@com_github_pkg_errors//:errors",
         "@com_github_prometheus_prometheus//model/labels",
-        "@com_github_prometheus_prometheus//storage",
-        "@org_golang_google_grpc//:go_default_library",
+        "@com_github_prometheus_prometheus//util/annotations",
+        "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
         "@org_golang_x_sync//errgroup",
@@ -52,7 +52,7 @@ go_test(
         "@com_github_gogo_protobuf//proto",
         "@com_github_pkg_errors//:errors",
         "@com_github_prometheus_prometheus//model/labels",
-        "@com_github_prometheus_prometheus//storage",
-        "@org_golang_google_grpc//:go_default_library",
+        "@com_github_prometheus_prometheus//util/annotations",
+        "@org_golang_google_grpc//:grpc",
     ],
 )
