--- a/pkg/testutil/e2eutil/BUILD.bazel
+++ b/pkg/testutil/e2eutil/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
         "copy.go",
         "port.go",
         "prometheus.go",
+        "rand.go",
         "sysprocattr.go",
         "sysprocattr_linux.go",
     ],
@@ -24,7 +25,6 @@ go_library(
         "@com_github_prometheus_prometheus//storage",
         "@com_github_prometheus_prometheus//tsdb",
         "@com_github_prometheus_prometheus//tsdb/chunkenc",
-        "@com_github_prometheus_prometheus//tsdb/chunks",
         "@com_github_prometheus_prometheus//tsdb/index",
         "@org_golang_x_sync//errgroup",
         "@org_uber_go_atomic//:atomic",
