--- a/pkg/tls/BUILD.bazel
+++ b/pkg/tls/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "tls",
@@ -16,4 +16,14 @@ alias(
     name = "go_default_library",
     actual = ":tls",
     visibility = ["//visibility:public"],
+)
+
+go_test(
+    name = "tls_test",
+    srcs = ["options_test.go"],
+    embed = [":tls"],
+    deps = [
+        "@com_github_stretchr_testify//assert",
+        "@com_github_stretchr_testify//require",
+    ],
 )
