--- a/pkg/ui/BUILD.bazel
+++ b/pkg/ui/BUILD.bazel
@@ -9,6 +9,19 @@ go_library(
         "rule.go",
         "ui.go",
     ],
+    embedsrcs = [
+        "static/react/asset-manifest.json",
+        "static/react/favicon.ico",
+        "static/react/index.html",
+        "static/react/manifest.json",
+        "static/react/static/css/main.17d667f4.css",
+        "static/react/static/css/main.17d667f4.css.map",
+        "static/react/static/js/main.77f2d0fe.js",
+        "static/react/static/js/main.77f2d0fe.js.LICENSE.txt",
+        "static/react/static/js/main.77f2d0fe.js.map",
+        "static/react/static/media/codicon.b3726f0165bf67ac6849.ttf",
+        "static/react/static/media/index.cd351d7c31d0d3fccf96.cjs",
+    ],
     importpath = "github.com/thanos-io/thanos/pkg/ui",
     visibility = ["//visibility:public"],
     deps = [
