--- a/test/e2e/BUILD.bazel
+++ b/test/e2e/BUILD.bazel
@@ -24,13 +24,15 @@ go_test(
     deps = [
         "//pkg/alert",
         "//pkg/api/blocks",
+        "//pkg/api/query",
         "//pkg/api/query/querypb",
         "//pkg/block",
         "//pkg/block/metadata",
         "//pkg/cacheutil",
+        "//pkg/clientconfig",
         "//pkg/errors",
         "//pkg/exemplars/exemplarspb",
-        "//pkg/httpconfig",
+        "//pkg/extannotations",
         "//pkg/metadata/metadatapb",
         "//pkg/promclient",
         "//pkg/query",
@@ -40,8 +42,10 @@ go_test(
         "//pkg/runutil",
         "//pkg/store",
         "//pkg/store/labelpb",
+        "//pkg/store/storepb",
         "//pkg/store/storepb/prompb",
         "//pkg/targets/targetspb",
+        "//pkg/tenancy",
         "//pkg/testutil/e2eutil",
         "//pkg/tls",
         "//pkg/tracing/client",
@@ -49,6 +53,7 @@ go_test(
         "//test/e2e/e2ethanos",
         "@com_github_chromedp_cdproto//network",
         "@com_github_chromedp_chromedp//:chromedp",
+        "@com_github_cortexproject_promqlsmith//:go_default_library",
         "@com_github_efficientgo_core//backoff",
         "@com_github_efficientgo_core//testutil",
         "@com_github_efficientgo_e2e//:e2e",
@@ -63,8 +68,11 @@ go_test(
         "@com_github_go_kit_log//:log",
         "@com_github_gogo_protobuf//proto",
         "@com_github_golang_snappy//:snappy",
+        "@com_github_google_go_cmp//cmp",
         "@com_github_oklog_ulid//:ulid",
         "@com_github_pkg_errors//:errors",
+        "@com_github_prometheus_client_golang//api",
+        "@com_github_prometheus_client_golang//api/prometheus/v1:prometheus",
         "@com_github_prometheus_client_golang//prometheus",
         "@com_github_prometheus_client_golang//prometheus/promauto",
         "@com_github_prometheus_common//config",
@@ -78,11 +86,13 @@ go_test(
         "@com_github_prometheus_prometheus//prompb",
         "@com_github_prometheus_prometheus//rules",
         "@com_github_prometheus_prometheus//storage/remote",
+        "@com_github_prometheus_prometheus//tsdb/tsdbutil",
+        "@com_github_stretchr_testify//require",
         "@com_github_thanos_io_objstore//:objstore",
         "@com_github_thanos_io_objstore//client",
         "@com_github_thanos_io_objstore//providers/s3",
         "@in_gopkg_yaml_v2//:yaml_v2",
-        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//credentials",
         "@org_golang_google_grpc//credentials/insecure",
         "@org_golang_google_grpc//keepalive",
