--- a/test/e2e/e2ethanos/BUILD.bazel
+++ b/test/e2e/e2ethanos/BUILD.bazel
@@ -10,14 +10,14 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/alert",
-        "//pkg/httpconfig",
+        "//pkg/api/query",
+        "//pkg/clientconfig",
         "//pkg/queryfrontend",
         "//pkg/receive",
         "@com_github_efficientgo_core//backoff",
         "@com_github_efficientgo_core//testutil",
         "@com_github_efficientgo_e2e//:e2e",
         "@com_github_efficientgo_e2e//db",
-        "@com_github_efficientgo_e2e//monitoring",
         "@com_github_efficientgo_e2e//observable",
         "@com_github_pkg_errors//:errors",
         "@com_github_prometheus_common//model",
