--- a/internal/cortex/frontend/transport/BUILD.bazel
+++ b/internal/cortex/frontend/transport/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "transport",
@@ -23,4 +23,15 @@ alias(
     name = "go_default_library",
     actual = ":transport",
     visibility = ["//:__subpackages__"],
+)
+
+go_test(
+    name = "transport_test",
+    srcs = ["handler_test.go"],
+    embed = [":transport"],
+    deps = [
+        "@com_github_go_kit_log//:log",
+        "@com_github_prometheus_client_golang//prometheus",
+        "@com_github_stretchr_testify//require",
+    ],
 )
