--- a/pkg/alert/BUILD.bazel
+++ b/pkg/alert/BUILD.bazel
@@ -9,8 +9,8 @@ go_library(
     importpath = "github.com/thanos-io/thanos/pkg/alert",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/clientconfig",
         "//pkg/discovery/dns",
-        "//pkg/httpconfig",
         "//pkg/runutil",
         "//pkg/tracing",
         "@com_github_go_kit_log//:log",
@@ -43,7 +43,7 @@ go_test(
     ],
     embed = [":alert"],
     deps = [
-        "//pkg/httpconfig",
+        "//pkg/clientconfig",
         "@com_github_efficientgo_core//testutil",
         "@com_github_pkg_errors//:errors",
         "@com_github_prometheus_client_golang//prometheus/testutil",
