--- a/pkg/block/metadata/BUILD.bazel
+++ b/pkg/block/metadata/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
     importpath = "github.com/thanos-io/thanos/pkg/block/metadata",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/extpromql",
         "//pkg/runutil",
         "@com_github_go_kit_log//:log",
         "@com_github_minio_sha256_simd//:sha256-simd",
@@ -17,7 +18,6 @@ go_library(
         "@com_github_pkg_errors//:errors",
         "@com_github_prometheus_prometheus//model/labels",
         "@com_github_prometheus_prometheus//model/relabel",
-        "@com_github_prometheus_prometheus//promql/parser",
         "@com_github_prometheus_prometheus//tsdb",
         "@com_github_prometheus_prometheus//tsdb/fileutil",
         "@com_github_prometheus_prometheus//tsdb/tombstones",
@@ -41,12 +41,12 @@ go_test(
     ],
     embed = [":metadata"],
     deps = [
+        "//pkg/testutil/custom",
         "@com_github_efficientgo_core//testutil",
         "@com_github_go_kit_log//:log",
         "@com_github_oklog_ulid//:ulid",
         "@com_github_pkg_errors//:errors",
         "@com_github_prometheus_prometheus//tsdb",
         "@com_github_thanos_io_objstore//:objstore",
-        "@org_uber_go_goleak//:goleak",
     ],
 )
