--- a/pkg/errutil/BUILD.bazel
+++ b/pkg/errutil/BUILD.bazel
@@ -1,14 +1,25 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "errutil",
     srcs = ["multierror.go"],
     importpath = "github.com/thanos-io/thanos/pkg/errutil",
     visibility = ["//visibility:public"],
+    deps = ["@com_github_pkg_errors//:errors"],
 )
 
 alias(
     name = "go_default_library",
     actual = ":errutil",
     visibility = ["//visibility:public"],
+)
+
+go_test(
+    name = "errutil_test",
+    srcs = ["multierror_test.go"],
+    embed = [":errutil"],
+    deps = [
+        "@com_github_pkg_errors//:errors",
+        "@com_github_stretchr_testify//require",
+    ],
 )
