--- a/pkg/exemplars/BUILD.bazel
+++ b/pkg/exemplars/BUILD.bazel
@@ -13,7 +13,9 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/exemplars/exemplarspb",
+        "//pkg/extpromql",
         "//pkg/promclient",
+        "//pkg/store",
         "//pkg/store/labelpb",
         "//pkg/store/storepb",
         "//pkg/tracing",
@@ -24,7 +26,8 @@ go_library(
         "@com_github_prometheus_prometheus//model/labels",
         "@com_github_prometheus_prometheus//promql/parser",
         "@com_github_prometheus_prometheus//storage",
-        "@org_golang_google_grpc//:go_default_library",
+        "@com_github_prometheus_prometheus//util/annotations",
+        "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
         "@org_golang_x_sync//errgroup",
@@ -47,6 +50,7 @@ go_test(
     embed = [":exemplars"],
     deps = [
         "//pkg/exemplars/exemplarspb",
+        "//pkg/extpromql",
         "//pkg/store/labelpb",
         "//pkg/store/storepb",
         "//pkg/testutil/custom",
@@ -55,7 +59,7 @@ go_test(
         "@com_github_pkg_errors//:errors",
         "@com_github_prometheus_prometheus//model/labels",
         "@com_github_prometheus_prometheus//promql/parser",
-        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
         "@org_uber_go_atomic//:atomic",
