--- a/pkg/extgrpc/BUILD.bazel
+++ b/pkg/extgrpc/BUILD.bazel
@@ -6,17 +6,18 @@ go_library(
     importpath = "github.com/thanos-io/thanos/pkg/extgrpc",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/server/grpc",
         "//pkg/tls",
         "//pkg/tracing",
         "@com_github_go_kit_log//:log",
         "@com_github_go_kit_log//level",
-        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//:go-grpc-middleware",
-        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go-grpc-prometheus",
+        "@com_github_grpc_ecosystem_go_grpc_middleware//providers/prometheus",
         "@com_github_opentracing_opentracing_go//:opentracing-go",
         "@com_github_prometheus_client_golang//prometheus",
-        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//credentials",
         "@org_golang_google_grpc//credentials/insecure",
+        "@org_golang_google_grpc//keepalive",
     ],
 )
 
