--- a/pkg/info/infopb/BUILD.bazel
+++ b/pkg/info/infopb/BUILD.bazel
@@ -2,14 +2,18 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "infopb",
-    srcs = ["rpc.pb.go"],
+    srcs = [
+        "custom.pb.go",
+        "rpc.pb.go",
+    ],
     importpath = "github.com/thanos-io/thanos/pkg/info/infopb",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/store/labelpb",
         "@com_github_gogo_protobuf//gogoproto",
         "@com_github_gogo_protobuf//proto",
-        "@org_golang_google_grpc//:go_default_library",
+        "@com_github_prometheus_prometheus//model/labels",
+        "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
     ],
