--- a/pkg/logging/BUILD.bazel
+++ b/pkg/logging/BUILD.bazel
@@ -13,16 +13,17 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/server/http",
+        "//pkg/server/http/middleware",
+        "//pkg/tracing/migration",
         "@com_github_efficientgo_tools_extkingpin//:extkingpin",
         "@com_github_go_kit_log//:log",
         "@com_github_go_kit_log//level",
-        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors",
         "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors/logging",
-        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors/tags",
         "@com_github_oklog_ulid//:ulid",
+        "@com_github_opentracing_opentracing_go//:opentracing-go",
         "@in_gopkg_yaml_v2//:yaml_v2",
+        "@io_opentelemetry_go_otel_trace//:trace",
         "@org_golang_google_grpc//codes",
-        "@org_golang_google_grpc//status",
     ],
 )
 
@@ -34,10 +35,14 @@ alias(
 
 go_test(
     name = "logging_test",
-    srcs = ["http_test.go"],
+    srcs = [
+        "http_test.go",
+        "logger_test.go",
+    ],
     embed = [":logging"],
     deps = [
         "@com_github_efficientgo_core//testutil",
         "@com_github_go_kit_log//:log",
+        "@com_github_go_kit_log//level",
     ],
 )
