--- a/pkg/metadata/BUILD.bazel
+++ b/pkg/metadata/BUILD.bazel
@@ -17,8 +17,8 @@ go_library(
         "@com_github_go_kit_log//:log",
         "@com_github_go_kit_log//level",
         "@com_github_pkg_errors//:errors",
-        "@com_github_prometheus_prometheus//storage",
-        "@org_golang_google_grpc//:go_default_library",
+        "@com_github_prometheus_prometheus//util/annotations",
+        "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
         "@org_golang_x_sync//errgroup",
@@ -48,8 +48,8 @@ go_test(
         "@com_github_efficientgo_core//testutil",
         "@com_github_go_kit_log//:log",
         "@com_github_pkg_errors//:errors",
-        "@com_github_prometheus_prometheus//storage",
-        "@org_golang_google_grpc//:go_default_library",
+        "@com_github_prometheus_prometheus//util/annotations",
+        "@org_golang_google_grpc//:grpc",
         "@org_uber_go_atomic//:atomic",
     ],
 )
