--- a/pkg/metadata/metadatapb/BUILD.bazel
+++ b/pkg/metadata/metadatapb/BUILD.bazel
@@ -12,7 +12,7 @@ go_library(
         "//pkg/store/storepb",
         "@com_github_gogo_protobuf//gogoproto",
         "@com_github_gogo_protobuf//proto",
-        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
     ],
