--- a/pkg/querysharding/BUILD.bazel
+++ b/pkg/querysharding/BUILD.bazel
@@ -9,7 +9,8 @@ go_library(
     importpath = "github.com/thanos-io/thanos/pkg/querysharding",
     visibility = ["//visibility:public"],
     deps = [
-        "@com_github_hashicorp_golang_lru//:golang-lru",
+        "//pkg/extpromql",
+        "@com_github_hashicorp_golang_lru//v2:golang-lru",
         "@com_github_prometheus_common//model",
         "@com_github_prometheus_prometheus//promql/parser",
     ],
