--- a/pkg/receive/BUILD.bazel
+++ b/pkg/receive/BUILD.bazel
@@ -3,6 +3,8 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 go_library(
     name = "receive",
     srcs = [
+        "capnp_server.go",
+        "capnproto_writer.go",
         "config.go",
         "handler.go",
         "hashring.go",
@@ -12,6 +14,7 @@ go_library(
         "multitsdb.go",
         "request_limiter.go",
         "writer.go",
+        "writer_errors.go",
     ],
     importpath = "github.com/thanos-io/thanos/pkg/receive",
     visibility = ["//visibility:public"],
@@ -19,6 +22,7 @@ go_library(
         "//pkg/api",
         "//pkg/api/status",
         "//pkg/block/metadata",
+        "//pkg/clientconfig",
         "//pkg/component",
         "//pkg/errors",
         "//pkg/errutil",
@@ -27,9 +31,11 @@ go_library(
         "//pkg/extprom",
         "//pkg/extprom/http",
         "//pkg/gate",
-        "//pkg/httpconfig",
+        "//pkg/info/infopb",
         "//pkg/logging",
+        "//pkg/pool",
         "//pkg/promclient",
+        "//pkg/receive/writecapnp",
         "//pkg/runutil",
         "//pkg/server/http/middleware",
         "//pkg/shipper",
@@ -37,14 +43,17 @@ go_library(
         "//pkg/store/labelpb",
         "//pkg/store/storepb",
         "//pkg/store/storepb/prompb",
+        "//pkg/tenancy",
         "//pkg/tracing",
         "@com_github_cespare_xxhash//:xxhash",
+        "@com_github_fsnotify_fsnotify//:fsnotify",
         "@com_github_go_kit_log//:log",
         "@com_github_go_kit_log//level",
         "@com_github_gogo_protobuf//proto",
         "@com_github_jpillora_backoff//:backoff",
         "@com_github_klauspost_compress//s2",
         "@com_github_mwitkow_go_conntrack//:go-conntrack",
+        "@com_github_oklog_ulid//:ulid",
         "@com_github_opentracing_opentracing_go//:opentracing-go",
         "@com_github_pkg_errors//:errors",
         "@com_github_prometheus_client_golang//prometheus",
@@ -52,16 +61,21 @@ go_library(
         "@com_github_prometheus_common//model",
         "@com_github_prometheus_common//route",
         "@com_github_prometheus_prometheus//model/exemplar",
+        "@com_github_prometheus_prometheus//model/histogram",
         "@com_github_prometheus_prometheus//model/labels",
         "@com_github_prometheus_prometheus//model/relabel",
         "@com_github_prometheus_prometheus//storage",
         "@com_github_prometheus_prometheus//tsdb",
         "@com_github_thanos_io_objstore//:objstore",
-        "@in_gopkg_fsnotify_v1//:fsnotify_v1",
         "@in_gopkg_yaml_v2//:yaml_v2",
-        "@org_golang_google_grpc//:go_default_library",
+        "@io_opentelemetry_go_otel//attribute",
+        "@io_opentelemetry_go_otel_trace//:trace",
+        "@org_capnproto_go_capnp_v3//:go_default_library",
+        "@org_capnproto_go_capnp_v3//rpc:go_default_library",
+        "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
+        "@org_golang_x_exp//slices",
         "@org_golang_x_sync//errgroup",
         "@org_uber_go_atomic//:atomic",
     ],
@@ -76,6 +90,9 @@ alias(
 go_test(
     name = "receive_test",
     srcs = [
+        "capnproto_server_bench_test.go",
+        "capnproto_server_test.go",
+        "capnproto_writer_bench_test.go",
         "config_test.go",
         "handler_test.go",
         "hashring_test.go",
@@ -90,19 +107,25 @@ go_test(
     embed = [":receive"],
     deps = [
         "//pkg/block/metadata",
+        "//pkg/component",
         "//pkg/exemplars/exemplarspb",
         "//pkg/extkingpin",
+        "//pkg/logging",
+        "//pkg/receive/writecapnp",
         "//pkg/runutil",
+        "//pkg/shipper",
         "//pkg/store",
         "//pkg/store/labelpb",
         "//pkg/store/storepb",
         "//pkg/store/storepb/prompb",
+        "//pkg/tenancy",
         "//pkg/testutil/custom",
         "@com_github_alecthomas_units//:units",
         "@com_github_efficientgo_core//testutil",
         "@com_github_go_kit_log//:log",
         "@com_github_gogo_protobuf//proto",
         "@com_github_golang_snappy//:snappy",
+        "@com_github_oklog_ulid//:ulid",
         "@com_github_pkg_errors//:errors",
         "@com_github_prometheus_client_golang//prometheus",
         "@com_github_prometheus_common//model",
@@ -113,10 +136,12 @@ go_test(
         "@com_github_prometheus_prometheus//model/relabel",
         "@com_github_prometheus_prometheus//storage",
         "@com_github_prometheus_prometheus//tsdb",
+        "@com_github_prometheus_prometheus//tsdb/tsdbutil",
         "@com_github_stretchr_testify//require",
         "@com_github_thanos_io_objstore//:objstore",
         "@in_gopkg_yaml_v3//:yaml_v3",
-        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//:grpc",
+        "@org_golang_google_grpc//test/bufconn",
         "@org_golang_x_sync//errgroup",
     ],
 )
