--- a/pkg/reloader/BUILD.bazel
+++ b/pkg/reloader/BUILD.bazel
@@ -2,7 +2,10 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "reloader",
-    srcs = ["reloader.go"],
+    srcs = [
+        "reloader.go",
+        "tracker.go",
+    ],
     importpath = "github.com/thanos-io/thanos/pkg/reloader",
     visibility = ["//visibility:public"],
     deps = [
@@ -11,6 +14,7 @@ go_library(
         "@com_github_go_kit_log//:log",
         "@com_github_go_kit_log//level",
         "@com_github_minio_sha256_simd//:sha256-simd",
+        "@com_github_mitchellh_go_ps//:go_default_library",
         "@com_github_pkg_errors//:errors",
         "@com_github_prometheus_client_golang//prometheus",
         "@com_github_prometheus_client_golang//prometheus/promauto",
