--- a/pkg/rules/rulespb/BUILD.bazel
+++ b/pkg/rules/rulespb/BUILD.bazel
@@ -16,7 +16,7 @@ go_library(
         "@com_github_gogo_protobuf//types",
         "@com_github_pkg_errors//:errors",
         "@com_github_prometheus_prometheus//model/labels",
-        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
     ],
