--- a/pkg/store/BUILD.bazel
+++ b/pkg/store/BUILD.bazel
@@ -4,17 +4,20 @@ go_library(
     name = "store",
     srcs = [
         "bucket.go",
+        "flushable.go",
         "io.go",
+        "lazy_postings.go",
         "limiter.go",
         "local.go",
-        "opts.go",
+        "postings.go",
         "postings_codec.go",
         "prometheus.go",
         "proxy.go",
-        "proxy_heap.go",
+        "proxy_merge.go",
         "recover.go",
         "telemetry.go",
         "tsdb.go",
+        "tsdb_selector.go",
     ],
     importpath = "github.com/thanos-io/thanos/pkg/store",
     visibility = ["//visibility:public"],
@@ -22,13 +25,16 @@ go_library(
         "//pkg/block",
         "//pkg/block/indexheader",
         "//pkg/block/metadata",
+        "//pkg/clientconfig",
         "//pkg/compact/downsample",
         "//pkg/component",
-        "//pkg/dedup",
+        "//pkg/extgrpc/snappy",
         "//pkg/extkingpin",
         "//pkg/extprom",
+        "//pkg/filter",
         "//pkg/gate",
-        "//pkg/httpconfig",
+        "//pkg/info/infopb",
+        "//pkg/losertree",
         "//pkg/model",
         "//pkg/pool",
         "//pkg/promclient",
@@ -39,7 +45,9 @@ go_library(
         "//pkg/store/storepb",
         "//pkg/store/storepb/prompb",
         "//pkg/strutil",
+        "//pkg/tenancy",
         "//pkg/tracing",
+        "//pkg/tracing/tracing_middleware",
         "@com_github_alecthomas_units//:units",
         "@com_github_blang_semver_v4//:semver",
         "@com_github_cespare_xxhash//:xxhash",
@@ -50,15 +58,16 @@ go_library(
         "@com_github_gogo_protobuf//proto",
         "@com_github_gogo_protobuf//types",
         "@com_github_golang_snappy//:snappy",
-        "@com_github_grpc_ecosystem_go_grpc_middleware_v2//interceptors/tracing",
+        "@com_github_klauspost_compress//s2",
         "@com_github_oklog_ulid//:ulid",
         "@com_github_opentracing_opentracing_go//:opentracing-go",
         "@com_github_pkg_errors//:errors",
         "@com_github_prometheus_client_golang//prometheus",
         "@com_github_prometheus_client_golang//prometheus/promauto",
         "@com_github_prometheus_common//model",
+        "@com_github_prometheus_prometheus//config",
         "@com_github_prometheus_prometheus//model/labels",
-        "@com_github_prometheus_prometheus//model/timestamp",
+        "@com_github_prometheus_prometheus//model/relabel",
         "@com_github_prometheus_prometheus//storage",
         "@com_github_prometheus_prometheus//storage/remote",
         "@com_github_prometheus_prometheus//tsdb/chunkenc",
@@ -67,9 +76,13 @@ go_library(
         "@com_github_prometheus_prometheus//tsdb/fileutil",
         "@com_github_prometheus_prometheus//tsdb/index",
         "@com_github_thanos_io_objstore//:objstore",
-        "@org_golang_google_grpc//:go_default_library",
+        "@com_github_weaveworks_common//httpgrpc",
+        "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//codes",
+        "@org_golang_google_grpc//metadata",
         "@org_golang_google_grpc//status",
+        "@org_golang_x_exp//maps",
+        "@org_golang_x_exp//slices",
         "@org_golang_x_sync//errgroup",
         "@org_uber_go_atomic//:atomic",
     ],
@@ -88,13 +101,14 @@ go_test(
         "bucket_e2e_test.go",
         "bucket_test.go",
         "io_test.go",
+        "lazy_postings_test.go",
         "limiter_test.go",
-        "opts_test.go",
         "postings_codec_test.go",
         "prometheus_test.go",
-        "proxy_heap_test.go",
+        "proxy_merge_test.go",
         "proxy_test.go",
         "recover_test.go",
+        "tsdb_selector_test.go",
         "tsdb_test.go",
     ],
     embed = [":store"],
@@ -105,9 +119,9 @@ go_test(
         "//pkg/compact",
         "//pkg/compact/downsample",
         "//pkg/component",
-        "//pkg/dedup",
         "//pkg/errors",
         "//pkg/gate",
+        "//pkg/info/infopb",
         "//pkg/model",
         "//pkg/pool",
         "//pkg/promclient",
@@ -117,8 +131,10 @@ go_test(
         "//pkg/store/storepb",
         "//pkg/store/storepb/prompb",
         "//pkg/store/storepb/testutil",
+        "//pkg/tenancy",
         "//pkg/testutil/custom",
         "//pkg/testutil/e2eutil",
+        "@com_github_alecthomas_units//:units",
         "@com_github_cespare_xxhash//:xxhash",
         "@com_github_cespare_xxhash_v2//:xxhash",
         "@com_github_efficientgo_core//testutil",
@@ -126,6 +142,7 @@ go_test(
         "@com_github_gogo_protobuf//proto",
         "@com_github_gogo_protobuf//types",
         "@com_github_gogo_status//:status",
+        "@com_github_klauspost_compress//s2",
         "@com_github_leanovate_gopter//:gopter",
         "@com_github_leanovate_gopter//gen",
         "@com_github_leanovate_gopter//prop",
@@ -135,6 +152,7 @@ go_test(
         "@com_github_prometheus_client_golang//prometheus/promauto",
         "@com_github_prometheus_client_golang//prometheus/testutil",
         "@com_github_prometheus_client_model//go",
+        "@com_github_prometheus_common//model",
         "@com_github_prometheus_prometheus//model/labels",
         "@com_github_prometheus_prometheus//model/relabel",
         "@com_github_prometheus_prometheus//model/timestamp",
@@ -146,10 +164,9 @@ go_test(
         "@com_github_thanos_io_objstore//:objstore",
         "@com_github_thanos_io_objstore//objtesting",
         "@com_github_thanos_io_objstore//providers/filesystem",
-        "@com_github_weaveworks_common//httpgrpc",
-        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//codes",
-        "@org_golang_google_grpc//status",
+        "@org_golang_x_exp//slices",
         "@org_uber_go_atomic//:atomic",
     ],
 )
