--- a/pkg/store/storepb/BUILD.bazel
+++ b/pkg/store/storepb/BUILD.bazel
@@ -20,9 +20,8 @@ go_library(
         "@com_github_gogo_protobuf//proto",
         "@com_github_gogo_protobuf//types",
         "@com_github_pkg_errors//:errors",
-        "@com_github_prometheus_prometheus//model/histogram",
         "@com_github_prometheus_prometheus//model/labels",
-        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
     ],
@@ -43,12 +42,13 @@ go_test(
     ],
     embed = [":storepb"],
     deps = [
+        "//pkg/extpromql",
         "//pkg/store/labelpb",
+        "//pkg/testutil/custom",
         "@com_github_alecthomas_units//:units",
         "@com_github_efficientgo_core//testutil",
         "@com_github_pkg_errors//:errors",
         "@com_github_prometheus_prometheus//model/labels",
-        "@com_github_prometheus_prometheus//promql/parser",
         "@com_github_prometheus_prometheus//tsdb/chunkenc",
     ],
 )
